--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
     </nav>
   </header>
 
-  <main id="work">
+  <main id="contact">
     <h1 class="lg-heading">
       Contact
       <span class="text-secondary">Me</span>
@@ -47,18 +47,22 @@
     <h2 class="sm-heading">
       This is how you can reach me...
     </h2>
-    <div class="projects">
+    <div class="boxes">
       <div>
-        <span class="text-secondary">Email:</span> rmcbain01@gmail.com
+        <span class="text-secondary">Email:</span>
+        <a href="mailto:rmcbain01@gmail.com">rmcbain01@gmail.com</a>
       </div>
       <!-- <div>
         <span class="text-secondary">Phone:</span> (702) 688-2747
       </div> -->
       <div>
-        <span class="text-secondary">Location:</span> Denver, CO. 80205
+        <span class="text-secondary">Location:</span>
+        <a href="https://www.google.com/maps/place/Denver,+CO+80205/@39.7616892,-104.986385,14z/data=!3m1!4b1!4m5!3m4!1s0x876c793e750e3927:0xc2e2a56dc91360bb!8m2!3d39.7558119!4d-104.9680914?hl=en"
+          target="_blank">Denver, CO 80205 </a>
       </div>
       <div>
-        <span class="text-secondary">Github:</span> https://github.com/rjmcbain
+        <span class="text-secondary">Linkedin:</span>
+        <a href="https://www.linkedin.com/in/rjmcbain/" target="_blank">www.linkedin.com/in/rjmcbain/ </a>
       </div>
     </div>
   </main>
